Update deploy - EC2 - CodeDeploy.yml

--- a/.github/workflows/deploy - EC2 - CodeDeploy.yml
+++ b/.github/workflows/deploy - EC2 - CodeDeploy.yml
@@ -20,12 +20,11 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v3
 
-      - name: Obtener Sonar Token desde AWS Secrets Manager
-        id: get_sonar_token
+      - name: Obtener Sonar Token de AWS Secrets Manager
         run: |
-          $SONAR_TOKEN = aws secretsmanager get-secret-value --secret-id DemoApi-Sonar-Token --query SecretString --output text
-          echo "::add-mask::$SONAR_TOKEN"
-          echo "SONAR_TOKEN=$SONAR_TOKEN" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo "Obteniendo Sonar Token desde AWS Secrets Manager..."
+          SONAR_TOKEN=$(aws secretsmanager get-secret-value --secret-id DemoApi-Sonar-Token --query SecretString --output text | jq -r '.SONAR_TOKEN')
+          echo "SONAR_TOKEN=${SONAR_TOKEN}" >> $GITHUB_ENV
 
       - name: Configurar .NET Framework 4.8
         uses: microsoft/setup-msbuild@v1
