--- a/.github/workflows/deploy - EC2 - CodeDeploy.yml
+++ b/.github/workflows/deploy - EC2 - CodeDeploy.yml
@@ -20,13 +20,12 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v3
 
-      # - name: Obtener Sonar Token de AWS Secrets Manager
-      #   shell: pwsh
-      #   run: |
-      #     echo "Obteniendo Sonar Token desde AWS Secrets Manager..."
-      #     $secretJson = aws secretsmanager get-secret-value --secret-id DemoApi-Sonar-Token --query SecretString --output text
-      #     $secretObj = $secretJson | ConvertFrom-Json
-      #     echo "SONAR_TOKEN=$($secretObj.SONAR_TOKEN)" | Out-File -FilePath $env:GITHUB_ENV -Append
+      - name: Obtener secreto de AWS
+        uses: aws-actions/aws-secretsmanager-get-secrets@v1
+        with:
+          secret-ids: |
+            sonar_org, Demo-Api-Sonar-Organization
+          parse-json-secrets: true
 
       - name: Configurar .NET Framework 4.8
         uses: microsoft/setup-msbuild@v1
@@ -40,8 +39,9 @@ jobs:
       - name: Iniciar análisis con SonarCloud
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_ORG: ${{ env.SONAR_ORG_VALUE }}
         run: |
-          dotnet sonarscanner begin /k:"carlospineda2006_DemoApi" /o:"carlospineda2006" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="DemoApi.Tests\coverage.opencover.xml"
+          dotnet sonarscanner begin /k:"carlospineda2006_DemoApi" /o:"${{ env.SONAR_ORG }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="DemoApi.Tests\coverage.opencover.xml"
 
       - name: Compilar solución
         run: msbuild DemoApi.sln /p:Configuration=Release /p:Platform="Any CPU"
