Update deploy - EC2 - CodeDeploy.yml

--- a/.github/workflows/deploy - EC2 - CodeDeploy.yml
+++ b/.github/workflows/deploy - EC2 - CodeDeploy.yml
@@ -99,14 +99,39 @@ jobs:
           $maxAttempts = 400 
           $attempts = 0
           $waitSeconds = 3
+          $lastEventCount = 0
 
           while ($STATUS -eq "InProgress" -or $STATUS -eq "Created") {
             $attempts++
-            $STATUS = aws deploy get-deployment --deployment-id $env:DEPLOYMENT_ID --query "deploymentInfo.status" --output text
-            Write-Output "Intento $attempts - Estado del despliegue: $STATUS"
+            
+            # Obtener información detallada del despliegue
+            $deploymentInfo = aws deploy get-deployment --deployment-id $env:DEPLOYMENT_ID --query "deploymentInfo" --output json | ConvertFrom-Json
+            $STATUS = $deploymentInfo.status
+            
+            # Obtener los eventos del despliegue
+            $events = aws deploy get-deployment-target --deployment-id $env:DEPLOYMENT_ID --target-id $deploymentInfo.targetInstances[0].targetId --query "deploymentTarget.lifecycleEvents" --output json | ConvertFrom-Json
+            
+            # Mostrar solo eventos nuevos
+            if ($events.Count -gt $lastEventCount) {
+              Write-Output "`nIntento $attempts de $maxAttempts - Nuevos eventos detectados:"
+              for ($i = $lastEventCount; $i -lt $events.Count; $i++) {
+                $event = $events[$i]
+                Write-Output "----------------------------------------"
+                Write-Output "Lifecycle Event: $($event.lifecycleEventName)"
+                Write-Output "Status: $($event.status)"
+                Write-Output "Start Time: $($event.startTime)"
+                
+                if ($event.status -eq "Failed") {
+                  Write-Output "Diagnostic: $($event.diagnostics.message)"
+                  Write-Output "Script Name: $($event.diagnostics.scriptName)"
+                  Write-Output "Log Tail: $($event.diagnostics.logTail)"
+                }
+              }
+              $lastEventCount = $events.Count
+            }
             
             if ($attempts -ge $maxAttempts) {
-              Write-Output "Tiempo de espera agotado después de $attempts intentos"
+              Write-Output "`nTiempo de espera agotado después de $attempts intentos"
               exit 1
             }
             
@@ -114,8 +139,14 @@ jobs:
           }
 
           if ($STATUS -ne "Succeeded") {
-            Write-Output "El despliegue falló con estado: $STATUS"
+            Write-Output "`nEl despliegue falló con estado final: $STATUS"
+            Write-Output "Descripción: $($deploymentInfo.statusDescription)"
+            if ($deploymentInfo.errorInformation) {
+              Write-Output "Error Code: $($deploymentInfo.errorInformation.code)"
+              Write-Output "Error Message: $($deploymentInfo.errorInformation.message)"
+            }
             exit 1
           }
 
-          Write-Output "Despliegue completado exitosamente"
+          Write-Output "`nDespliegue completado exitosamente"
+          Write-Output "Tiempo total de despliegue: $($deploymentInfo.completeTime - $deploymentInfo.createTime)"
