--- a/.github/workflows/deploy - fargate.yml
+++ b/.github/workflows/deploy - fargate.yml
@@ -80,15 +80,15 @@ jobs:
 
       - name: Verificar estado de la actualización del servicio
         run: |
-          while true; do
-            STATUS=$(aws ecs describe-services \
-              --cluster demo-api-cluster \
-              --services demo-api-service \
-              --query "services[0].deployments[0].status" \
-              --output text)
+          while ($true) {
+            $STATUS = aws ecs describe-services `
+              --cluster demo-api-cluster `
+              --services demo-api-service `
+              --query "services[0].deployments[0].status" `
+              --output text
             echo "Estado del despliegue: $STATUS"
-            if [ "$STATUS" == "PRIMARY" ]; then
+            if ($STATUS -eq "PRIMARY") {
               break
-            fi
-            sleep 10
-          done
+            }
+            Start-Sleep -Seconds 10
+          }
